...
  },
  "home": {
    "revisado": "revisado",
    "ordenarAhora": "Ordenar ahora",
    "floatingButton_hint": "Desliza a la derecha para ocultar",
    "listos": "listos",
    "tuBiblioteca": "Tu biblioteca",
    "papeleraPendiente": "Papelera Pendiente",
    "ajustarMeta": "Ajustar meta",
    "unDiaComoHoy": "Un día como hoy",
    "fotos": "{{n}} fotos",
    "bibliotecaMeses": "Tu biblioteca · {{n}} meses",
    "meses": "{{n}} meses",
...
